# rufu

./: Cargo.toml  Config.toml
rufu_article/: Cargo.toml
rufu_article/src/entity/: article_category_entity.rs  article_data_entity.rs  article_entity.rs  mod.rs
rufu_article/src/request/: article_category_request.rs  article_request.rs  mod.rs
rufu_article/src/service/: article_category_service.rs  article_service.rs  mod.rs
rufu_article/src/vo/: article_category_vo.rs  article_vo.rs  mod.rs
rufu_auth/: Cargo.toml
rufu_auth/src/: interface.rs  lib.rs
rufu_auth/src/entity/: admin_user_entity.rs  admin_users_entity.rs  mod.rs  user_entity.rs
rufu_auth/src/middleware/: jwt_middleware.rs  mod.rs
rufu_auth/src/request/: admin_auth_request.rs  mod.rs
rufu_auth/src/service/: admin_users_service.rs  auth_service.rs  mod.rs
rufu_auth/src/vo/: admin_users_vo.rs  mod.rs
rufu_common/: Cargo.toml
rufu_common/src/: errors.rs  json.rs  lib.rs  query.rs  response.rs
rufu_common/src/bootstrap/: application.rs  database.rs  mod.rs
rufu_common/src/config/: app_config.rs
rufu_common/src/enums/: mod.rs  user_domain_enum.rs
rufu_common/src/middleware/: map_response_middleware.rs  mod.rs  paginate_request_middleware.rs
rufu_common/src/request/: batch_delete_request.rs  default_batch_delete_request.rs  mod.rs  paginate_request.rs
rufu_common/src/utils/: date_utils.rs  mix_utils.rs  mod.rs  rand_utils.rs  regex_utils.rs
rufu_common/src/validate/: mod.rs  validate_domain.rs
rufu_permission/: Cargo.toml
rufu_permission/src/: lib.rs
rufu_permission/src/entity/: mod.rs  permission_entity.rs  role_entity.rs  role_permission_entity.rs
rufu_permission/src/request/: mod.rs  permission_request.rs  role_permission_request.rs  role_request.rs
rufu_permission/src/service/: mod.rs  permission_service.rs  role_service.rs
rufu_permission/src/vo/: mod.rs  role_api_vo.rs  role_vo.rs
rufu_web/: Cargo.toml
rufu_web/src/: main.rs
rufu_web/src/app/controller/: mod.rs
rufu_web/src/app/controller/admin/: admin_article_category_controller.rs  admin_article_controller.rs  admin_auth_controller.rs  admin_permission_controller.rs  admin_role_controller.rs  admin_user_role_controller.rs  mod.rs
rufu_web/src/entity/: mod.rs  user_role_entity.rs
rufu_web/src/middleware/: mod.rs  permission_middleware.rs
rufu_web/src/openapi/: api_doc.rs  api_router.rs  mod.rs
rufu_web/src/request/: mod.rs  user_role_request.rs
rufu_web/src/router/: admin_routes.rs  api_routes.rs  mod.rs
rufu_web/src/routes/: admin.rs  api.rs
rufu_web/src/service/: user_role_service.rs
rufu_web/src/traits/: mod.rs  user_role_trait.rs
sql/: init_mysql.sql
