[package]
name = "rufu_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
utoipa = "4.1.0"
# 解析Url参数
serde_urlencoded = "0.7.1"
# 字段验证
validator = { version = "0.16.1", features = ["derive"] }
# 惰性初始化静态数据
lazy_static = "1.4.0"
# 配置文件
config = "0.13.4"
# 环境变量
dotenv_rs = "0.16.1"
# ORM rbatis deps
rbs = { version = "4.5" }
rbatis = { version = "4.5" }
rbdc-mysql = { version = "4.5" }
# 错误报告
anyhow = "1.0.77"
thiserror = "1.0.52"
# 密码加密工具
argon2 = "0.5.2"
# 随机数
rand = "0.8.5"
# 日志
log = "0.4.20"
fast_log = "1.6.12"
# 网络运行时组件
tower = { version = "0.4.13", features = ["timeout"] }
async-trait = "0.1.75"
# JWT
jsonwebtoken = "9.2.0"
# 正则工具
regex = { version = "1.10.2", features = [] }
# 短ID生成
sqids = "0.4.0"
